Fixed formatting and spacing

--- a/Goggles/style.css
+++ b/Goggles/style.css
@@ -282,10 +282,10 @@ body {
   }
 
   .addendum__end-text {
-    font-size: 0.875rem;
+    font-size: 0.9rem;
   }
 
   .footer {
-    font-size: 0.75rem;
+    font-size: 0.85rem;
   }
 }
